--- a/src/Details.css
+++ b/src/Details.css
@@ -4,7 +4,7 @@
     gap: 30px;
     max-width: 800px;
     margin: 0 auto;
-    padding-bottom: 40px;
+    padding-bottom: 90px;
 }
 
 .detail-block {
