--- a/src/Honeymoon.css
+++ b/src/Honeymoon.css
@@ -1,6 +1,6 @@
 .honeymoon-section {
     background-color: var(--pb-cream);
-    padding-bottom: 40px;
+    padding-bottom: 90px;
 }
 
 .honeymoon-content {
