--- a/src/RSVP.css
+++ b/src/RSVP.css
@@ -1,6 +1,6 @@
 .rsvp-section {
     text-align: center;
-    padding-bottom: 60px;
+    padding-bottom: 90px;
     /* Extra padding at bottom of page */
 }
 
